# rs-bookmark-tool

./: Cargo.toml  README.md  resources.json
src/: link.rs  main.rs  validate.rs
toml/: 100_exercises_to_learn_rust.toml  50_shades_of_rust,_or_emerging_rust_guis_in_a_wasm_world.toml  Rust-Edu_Homepage.toml  Rust-Edu_Homepage_toml  Rust-Edus_Announcements.toml  The_Rust_Organizations_guide_to_learning_Rust.toml  The_source_code_of_the_Rust_compilers_borrow_checker.toml  _let's get rusty_ cheat sheet.toml  _let_s_get_rusty_cheat_sheet.toml  a_5-step_guide_for_learning_embedded_rust.toml  a_freestanding_rust_binary.toml  a_practical_introduction_to_derive_macros_with_attributes.toml  actors with tokio.toml  actors_with_tokio.toml  aim_for_immutability_in_rust.toml  aiming_for_idiomatic_rust.toml  alice_ryhl_-_what_it_takes_to_keep_tokio_running.toml  all the algorithms, implemented in rust.toml  all_the_algorithms,_implemented_in_rust.toml  an example of verifying unsafe code with kani.toml  an_example_of_verifying_unsafe_code_with_kani.toml  an_idiomatic_way_to_sum_up_values_in_a_multidimensional_array.toml  an_overview_of_the_embedded_rust_ecosystem.toml  annotate code for a reading club.toml  annotate_code_for_a_reading_club.toml  are_out_parameters_idiomatic_in_rust_.toml  await_a_minute.toml  begin rust_ a complete guide to programming with rust, for new and experienced programmers alike.toml  begin_rust_a_complete_guide_to_programming_with_rust,_for_new_and_experienced_programmers_alike.toml  ben_wishovich_-_full_stack_rust_-_building_rust_websites_with_leptos.toml  (+216 more)
