[package]
name = "bookmark-tool"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
inquire = "0.7.5"
reqwest = { version="0.12.5", features = ["blocking"] }
scraper = "0.20.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.3"
toml = "0.8.14"
toml_datetime = "0.6.6"
unidecode = "0.3.0"
